skeleton for all available plugins api and emoticon plugin api
